--- a/src/template.html
+++ b/src/template.html
@@ -1,13 +1,7 @@
 <!--
   Hello!
-  -
-  Simplefolio is a clean and responsive portfolio template for Developers!
-  Created by Jacobo Martinez.
-  -
-  Github Repo: https://github.com/cobidev/simplefolio/
-  Readme: https://github.com/cobidev/simplefolio/README.md
-  -
-  For business & inquires, contact me -> jacobojavier98@gmail.com
+
+  For business & inquires, contact me -> steve7x4@gmail.com
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -18,11 +12,11 @@
     <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
 
     <!-- Put here your site title -->
-    <title>[Your name here] | Developer</title>
+    <title>Steve Sultan | Web Developer</title>
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
-    <meta name="keywords" content="[username], [name], skill" />
+    <meta name="keywords" content="stevesultan, steve, sultan, javascript, typescript, angulardeveloper, c#developer, fullstackdev, coder, developer" />
     <!-- Improve your SEO by adding a small descrption of you -->
-    <meta name="description" content="[Your name here] | Developer" />
+    <meta name="description" content="Steve Sultan front-end back-end full-stack cloud database developer" />
 
     <!-- Required librarys -->
     <link
@@ -46,9 +40,9 @@
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
+          <span class="text-color-main">Steve Sultan</span>
           <br />
-          I'm the Unknown Developer.
+          Full-Stack Web Developer
         </h1>
         <p class="hero-cta" class="load-hidden">
           <a class="cta-btn cta-btn--hero" href="#about">Know more</a>
@@ -78,19 +72,17 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Excepturi neque, ipsa animi maiores repellendu distinctioaperiam
-                earum dolor voluptatum consequatur blanditiis inventore debitis
-                fuga numquam voluptate architecto itaque molestiae.
+               Familiar with various operating systems, 
+               and various tech stacks like MEAN, MERN. 
+               Highly motivated in web design, web development and cloud architecture
               </p>
               <p class="about-wrapper__info-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Excepturi neque, ipsa animi maiores repellendu distinctioaperiam
-                earum dolor voluptatum consequatur blanditiis inventore debitis
-                fuga numquam voluptate architecto itaque molestiae.
+              Highly organized and expericed web app developer since 2016, 
+              worked with medium and large teams to find bugs 
+              and add new features to it 
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/file/d/1w4q5J5UXOEqBPV4L8Q78mN0_uGClE63Y/view?usp=sharing">
                   View Resume
                 </a>
               </span>
@@ -223,13 +215,13 @@
         </h2>
         <div class="contact-wrapper">
           <p class="contact-wrapper__text">
-            [Put your call to action here]
+            For business & inquires
           </p>
           <a
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
+            href="mailto:stevesultan@outlook.com"
+            >Click here to send email</a
           >
         </div>
       </div>
@@ -247,9 +239,6 @@
             <i class="fa fa-twitter fa-inverse"></i>
           </a>
           <a href="#!" target="_blank">
-            <i class="fa fa-codepen fa-inverse"></i>
-          </a>
-          <a href="#!" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
           <a href="#!" target="_blank">
@@ -261,30 +250,8 @@
 
         <!-- If you give me some credit, will be huge for me :) -->
         <p class="footer__text">
-          © 2020 - Template developed by <a href="https://github.com/cobidev" target="_blank">Jacobo Martínez</a>
+          © 2017 All right reserved - Steve Sultan 
           </a>
-        </p>
-
-        <!-- Remove this paragraph once you setup your custom portfolio -->
-        <p class="mt-3 pt-3">
-          <a
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio/fork"
-            data-icon="octicon-repo-forked"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Fork ntkme/github-buttons on GitHub"
-            >Fork</a
-          >
-          <a
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio"
-            data-icon="octicon-star"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Star cobidev/simplefolio on GitHub"
-            >Star</a
-          >
         </p>
       </div>
     </footer>
