changed font color

--- a/src/template.html
+++ b/src/template.html
@@ -76,10 +76,9 @@
                and various tech stacks like MEAN, MERN. 
                Highly motivated in web design, web development and cloud architecture
               </p>
+              <br>
               <p class="about-wrapper__info-text">
-              Highly organized and expericed web app developer since 2016, 
-              worked with medium and large teams to find bugs 
-              and add new features to it 
+             Skills:<br> React/Angular<br>Node.JS<br>C#,JAVA,Python<br>AWS,Azure,Docker
               </p>
               <span class="d-flex mt-3">
                 <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/file/d/1w4q5J5UXOEqBPV4L8Q78mN0_uGClE63Y/view?usp=sharing">
@@ -235,13 +234,13 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a href="#!" target="_blank">
+          <a href="https://twitter.com/anonymous_Stv" target="_blank">
             <i class="fa fa-twitter fa-inverse"></i>
           </a>
-          <a href="#!" target="_blank">
+          <a href="https://www.linkedin.com/in/stevesultan/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a href="#!" target="_blank">
+          <a href="https://github.com/SteveSultan" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
@@ -250,7 +249,7 @@
 
         <!-- If you give me some credit, will be huge for me :) -->
         <p class="footer__text">
-          © 2017 All right reserved - Steve Sultan 
+          © 2017 All rights reserved - Steve Sultan 
           </a>
         </p>
       </div>
