--- a/src/template.html
+++ b/src/template.html
@@ -112,7 +112,7 @@
                     fullscreen preview with one click. Pure CSS for that.
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://github.com/SteveSultan/photo-feed">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://vigorous-lichterman-79752e.netlify.app/">
                   See Live
                 </a>
                 <a target="_blank" class="cta-btn text-color-main" href="https://github.com/SteveSultan/photo-feed">
